--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "symfony/monolog-bundle": "~2.1",
         "symfony/options-resolver": "~2.1",
         "symfony/security": "~2.1",
-        "symfony/validator": "~2.1",
+        "symfony/validator": "~2.1"
     },
     "suggest": {
     },
